Prepare public multi-version release